force-app/main/default/objects/clofor_com_cfs__LoanACBal__c/fields/clofor_com_cfs__ClosingBalanceFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ClosingBalanceFormu__c</fullName>
    <formula>clofor_com_cfs__LoanID__r.clofor_com_cfs__ClosingBalance__c</formula>
    <label>CLOSING BALANCE FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>