force-app/main/default/objects/clofor_com_cfs__LoanACBal__c/fields/clofor_com_cfs__LoanAmountACBal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoanAmountACBal__c</fullName>
    <label>LOAN AMOUNT-A/C BAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>