force-app/main/default/objects/clofor_com_cfs__LoanACBal__c/fields/clofor_com_cfs__LoanAmountFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoanAmountFormu__c</fullName>
    <formula>clofor_com_cfs__LoanID__r.clofor_com_cfs__LoanAmount__c</formula>
    <label>LOAN AMOUNT-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>