force-app/main/default/objects/clofor_com_cfs__LoanACBal__c/fields/clofor_com_cfs__LoanID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoanID__c</fullName>
    <label>LOAN ID</label>
    <referenceTo>clofor_com_cfs__Loan__c</referenceTo>
    <relationshipLabel>LOAN+A/C BAL</relationshipLabel>
    <relationshipName>LoanACBal</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>